web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-setter-default-value/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,19)
1|({ set f(a = 1) { "use strict" } })
 |                 ^
